--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,6 +95,11 @@ input {
     border-collapse: separate;
     text-align: center;
 }
+#output{
+    width: 450px;
+    font-size: .7rem;
+    font-weight: 600;
+}
 
 
 /* Responsive styles for screens  */
@@ -144,6 +149,6 @@ input {
             width: 8em;
         }
       }
-  }
+  
   
 
